# goit-web-homework13

./: .coverage  .gitignore  README.md  conftest.py  docker-compose.yml  main.py  pyproject.toml  test_main.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 01944a8582be_user_confirmed.py  49e5bf08b183_init.py  9cb418ae4071_avatar.py  f6db57a515f6_init.py
src/auth/: auth.py  auth_tests.py  user.py
src/config/: settings.py
src/models/: db.py  models.py  schemas.py
src/routes/: auth.py  contacts.py  routes.py  tmp.py  user.py
src/services/: auth.py  contacts.py  email.py  users.py
src/services/templates/: confirmatilon_email_template.html
src/workers/: contacts.py  email.py
tests/: conftest.py  test_route_auth.py  test_unit_auth.py  test_unit_contact.py  test_unit_user.py
